--- a/css/accumulo.scss
+++ b/css/accumulo.scss
@@ -1,11 +1,11 @@
 ---
 ---
 
-@import "syntax-highlighting";
+@use "syntax-highlighting";
 
 table {
- margin: 10px 0px 30px 0px;
- padding: 10px 5px 10px 5px;
+  margin: 10px 0px 30px 0px;
+  padding: 10px 5px 10px 5px;
 }
 
 th, td {
@@ -61,13 +61,13 @@ code {
 }
 
 #nav-logo {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
 }
 
 #home-description {
-    font-size: 17px;
+  font-size: 17px;
 }
 
 #sidebar {
@@ -85,67 +85,68 @@ code {
 }
 
 #bannertext {
-    margin-top: 10px;
-    text-align: left;
+  margin-top: 10px;
+  text-align: left;
 }
 
 .clear {
-    clear: both;
+  clear: both;
 }
 
 #content {
-    padding: 0 8px 20px;
+  padding: 0 8px 20px;
 }
 
 #content h1 {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 #content h2 {
-    margin-bottom: 0.5em;
-    border-bottom: 1px solid #CCCCCC;
-    padding-bottom: 0.25em;
+  margin-bottom: 0.5em;
+  border-bottom: 1px solid #CCCCCC;
+  padding-bottom: 0.25em;
 }
+
 #content h3 {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
+
 #content img {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 footer {
-    border-top: 1px solid #CCCCCC;
-    color: #666666;
-    font-size: 0.8em;
-    padding: 8px 8px;
-    text-align: center;
+  border-top: 1px solid #CCCCCC;
+  color: #666666;
+  font-size: 0.8em;
+  padding: 8px 8px;
+  text-align: center;
 }
 
 footer > p {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #asf-logo {
-    float: left;
-
+  float: left;
 }
 
 #release_notes_testing {
-    border-collapse:collapse;
+  border-collapse: collapse;
 }
 
 #release_notes_testing, #release_notes_testing tr, #release_notes_testing th, #release_notes_testing td {
-    border: 2px solid black;
+  border: 2px solid black;
 }
 
 #release_notes_testing th, #release_notes_testing td {
-    padding: 5px;
+  padding: 5px;
 }
 
 #accumulo-summit-logo img {
-  height: 70px
+  height: 70px;
 }
 
 .selected {
@@ -155,7 +156,6 @@ footer > p {
 .header-link {
   padding-left: 5px;
   opacity: 0;
-
   \-webkit-transition: opacity 0.2s ease-in-out 0.1s;
   \-moz-transition: opacity 0.2s ease-in-out 0.1s;
   \-ms-transition: opacity 0.2s ease-in-out 0.1s;
@@ -195,50 +195,48 @@ a.prop {
     position: static;
   }
 }
-
 /* Makes navbar collapse at larger width (1050px) */
 @media (max-width: 975px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-    .navbar-collapse.collapse.show {
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
-    }
+  .navbar-header {
+    float: none;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-collapse.collapse {
+    display: none !important;
+  }
+  .navbar-nav {
+    float: none !important;
+    margin: 7.5px;
+  }
+  .navbar-nav > li {
+    float: none;
+  }
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .navbar-text {
+    float: none;
+    margin: 15px 0;
+  }
+  .navbar-collapse.collapse.show {
+    display: block !important;
+  }
+  .collapsing {
+    overflow: hidden !important;
+  }
 }
-
 .blog-img-center {
-      max-width: 95%;
-      margin-top: 10px;
-      margin-bottom: 10px;
-      margin-left: auto;
-      margin-right: auto;
-      display: block;
+  max-width: 95%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
